--- a/resources/views/novedad/index.edge
+++ b/resources/views/novedad/index.edge
@@ -29,13 +29,13 @@
 </ul>
 --}}
 <table class="table table-hover table-striped table-sm">
-  <thead class="thead-dark">
+  {{--  <thead class="thead-dark">
     <tr>
       <th>*</th>
       <th>*</th>
       <th>*</th>
     </tr>
-  </thead>
+  </thead>  --}}
   <tbody>
     @each(novedad in novedades)
     <tr>
