--- a/resources/views/camara/edit.edge
+++ b/resources/views/camara/edit.edge
@@ -5,16 +5,7 @@
 <form action="{{ route('camara.update', {'id': camara.id}) }}?_method=PUT" method="POST">
   {{ csrfField() }}
 
-  <div class="form-group">
-    <label>Nombre</label>
-    <input type="text" class="form-control" name="nombre"
-      value="{{ flashMessages.has('errors.nombre') ? flashMessages.get('nombre') : camara.nombre }}">
-    @if(flashMessages.has('errors.nombre'))
-    <small class="form-text text-muted">
-      {{ flashMessages.get('errors.nombre') }}
-    </small>
-    @endif
-  </div>
+  @include('camara/_form')
 
   <button type="submit" class="btn btn-primary">Guardar</button>
   <a href="{{ route('camara.index') }}" class="btn btn-link">Cancelar</a>
