--- a/resources/views/tipo/create.edge
+++ b/resources/views/tipo/create.edge
@@ -5,15 +5,7 @@
 <form action="{{ route('tipo.store') }}" method="POST">
   {{ csrfField() }}
 
-  <div class="form-group">
-    <label>Nombre</label>
-    <input type="text" class="form-control" name="nombre" value="{{ flashMessages.get('nombre') || '' }}">
-    @if(flashMessages.has('errors.nombre'))
-    <small class="form-text text-muted">
-      {{ flashMessages.get('errors.nombre') }}
-    </small>
-    @endif
-  </div>
+  @include('tipo/_form')
 
   <button type="submit" class="btn btn-primary">Guardar</button>
   <a href="{{ route('tipo.index') }}" class="btn btn-link">Cancelar</a>
