--- a/resources/views/novedad/index.edge
+++ b/resources/views/novedad/index.edge
@@ -7,49 +7,19 @@
 </div>
 
 @include('novedad/_filter')
-{{--
-<ul class="list-group">
-  @each(novedad in novedades)
-    <li class="list-group-item">
-      <div class="d-flex w-100 justify-content-between">
-        <small>{{ datetime(novedad.fecha) }}</small>
-<small>{{ novedad.user.username }}</small>
-</div>
-<h5 class="mb-1">{{ novedad.camara.nombre }}</h5>
-<p class="mb-1">{{ novedad.descripcion }}</p>
-<div class="d-flex w-100 justify-content-between">
-  <small>{{ novedad.tipo.nombre }}</small>
-  <span>
-    <a href="{{ route('novedad.show', { id: novedad.id })}}">Info</a>
-    <a href="{{ route('novedad.edit', { id: novedad.id })}}">Editar</a>
-  </span>
-</div>
-</li>
-@endeach
-</ul>
---}}
+
 <table class="table table-hover table-striped table-sm">
-  {{--  <thead class="thead-dark">
-    <tr>
-      <th>*</th>
-      <th>*</th>
-      <th>*</th>
-    </tr>
-  </thead>  --}}
   <tbody>
     @each(novedad in novedades)
     <tr>
       <td>
         {{ datetime(novedad.fecha) }}<br>
-        <h5>
-          {{ novedad.camara.nombre }}
-          </h5>
+        <h5>{{ novedad.camara.nombre }}</h5>
       </td>
       <td>
         <small class="text-muted">{{ (novedad.user)? novedad.user.username :''}}</small>
         <br>
         <h5>{{ novedad.descripcion }}</h5>
-
         <br>
         <small>{{ novedad.tipo? novedad.tipo.nombre: '' }}</small>
       </td>
