--- a/resources/views/novedad/paginate.edge
+++ b/resources/views/novedad/paginate.edge
@@ -3,6 +3,18 @@
 @section('content')
 <h1>Paginado</h1>
 
+<table class="table table-sm">
+  @each(novedad in novedades)
+  <tr>
+    <td>{{ novedad.id }}</td>
+    <td>{{ datetime(novedad.fecha) }}</td>
+    <td>{{ novedad.camaraId }}</td>
+    <td>{{ novedad.descripcion }}</td>
+  </tr>
+  @endeach
+</table>
+
+{{--
 Total {{ pagination.total }}<br>
 Per page {{ pagination.per_page }}<br>
 <br>
@@ -12,32 +24,30 @@ Current page {{ pagination.current_page }}<br>
 Next page {{ pagination.next_page_url }}<br>
 Last page {{ pagination.last_page }}<br>
 <hr>
+--}}
 
 <nav aria-label="Page navigation example">
   <ul class="pagination justify-content-center">
 
-    {{--  <li class="page-item">
-      <a class="page-link"
-        href="{{ pagination.current_page == 1 ? '#' : '?page=' + (pagination.current_page - 1) }}">Previous</a>
-    </li>  --}}
+    @if(pagination.current_page !=pagination.first_page)
+    <li class="page-item">
+      <a class="page-link" href="?page={{pagination.current_page - 1}}">Prev</a>
+    </li>
+    @endif
 
     @each(page in range(1, pagination.last_page))
-  <li class="page-item {{ pagination.current_page == page ? 'active' : ''}}">
+    <li class="page-item {{ pagination.current_page == page ? 'active' : ''}}">
       <a class="page-link" href="{{ route('novedad.paginate') }}?page={{ page }}">{{ page }}</a>
     </li>
     @endeach
 
-    {{--  <li class="page-item">
-      <a class="page-link"
-        href="{{ pagination.current_page == pagination.last_page ? '#' : ('?page=' + (pagination.current_page + 1)) }}">Next</a>
-    </li>  --}}
+    @if(pagination.current_page !=pagination.last_page)
+    <li class="page-item">
+      <a class="page-link" href="?page={{pagination.current_page + 1}}">Next</a>
+    </li>
+    @endif
+
   </ul>
 </nav>
-
-@each(novedad in novedades)
-<p>
-  {{ datetime(novedad.fecha) }} <b>[{{ novedad.camaraId }}]</b> {{ novedad.descripcion }}
-</p>
-@endeach
 
 @endsection
