--- a/resources/views/novedad/_filter.edge
+++ b/resources/views/novedad/_filter.edge
@@ -3,49 +3,70 @@
     <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown"
       aria-haspopup="true" aria-expanded="false">
       <i class="fa fa-filter"></i>
-      Filtrar
+      Filtrar {{ camara }}, {{usuario}}, {{tipo }}
     </button>
     <div class="dropdown-menu">
-      <form class="px-4 py-3" _action="{{ route('novedad.index') }}">
-
+      <form class="px-4 py-3" action="{{ route('novedad.filter') }}" method="POST">
+        {{ csrfField() }}
         <div class="form-group">
           <select class="custom-select custom-select-sm" name="camara">
-            @set('seleccion', request.get('camara'))
+            @set('seleccion', camara)
+            <option value="">Cualquier camara</option>
+            @each(camara in camaras)
+            <option value="{{ camara.id}}" {{ ((''+camara.id) == seleccion) ? ' selected' : ''}}>
+              {{camara.nombre}}
+            </option>
+            @endeach
+            {{--  @set('seleccion', request.get('camara'))
             <option value="">Cualquier camara</option>
             @each(camara in camaras)
             <option value="{{ camara.id}}" {{ ((''+camara.id) == seleccion.camara) ? ' selected' : ''}}>
               {{camara.nombre}}
             </option>
-            @endeach
+            @endeach  --}}
           </select>
         </div>
 
         <div class="form-group">
           <select class="custom-select custom-select-sm" name="usuario">
-            @set('seleccion2', request.get('usuario'))
+            @set('seleccion2', usuario)
+            <option value="">Cualquier usuario</option>
+            @each(usuario in usuarios)
+            <option value="{{ usuario.id}}" {{ ((''+usuario.id) == seleccion2) ? ' selected' : ''}}>
+              {{usuario.username}}
+            </option>
+            @endeach
+            {{--  @set('seleccion2', request.get('usuario'))
             <option value="">Cualquier usuario</option>
             @each(usuario in usuarios)
             <option value="{{ usuario.id}}" {{ ((''+usuario.id) == seleccion2.usuario) ? ' selected' : ''}}>
               {{usuario.username}}
             </option>
-            @endeach
+            @endeach  --}}
           </select>
         </div>
 
         <div class="form-group">
           <select class="custom-select custom-select-sm" name="tipo">
-            @set('seleccion3', request.get('tipo'))
+            @set('seleccion3', tipo)
+            <option value="">Cualquier tipo</option>
+            @each(tipo in tipos)
+            <option value="{{ tipo.id}}" {{ ((''+tipo.id) == seleccion3) ? ' selected' : ''}}>
+              {{tipo.nombre}}
+            </option>
+            @endeach
+            {{--  @set('seleccion3', request.get('tipo'))
             <option value="">Cualquier tipo</option>
             @each(tipo in tipos)
             <option value="{{ tipo.id}}" {{ ((''+tipo.id) == seleccion3.tipo) ? ' selected' : ''}}>
               {{tipo.nombre}}
             </option>
-            @endeach
+            @endeach  --}}
           </select>
         </div>
 
         <button type="submit" class="btn btn-primary">Aplicar</button>
-        <a class="btn btn-default" href="{{ route('novedad.index') }}">Quitar filtros</a>
+        <a class="btn btn-default" href="{{ route('novedad.removeFilter') }}">Quitar filtros</a>
       </form>
     </div>
   </div>
