Improve:  Pagination and filtering

--- a/resources/views/novedad/_filter.edge
+++ b/resources/views/novedad/_filter.edge
@@ -3,7 +3,7 @@
     <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown"
       aria-haspopup="true" aria-expanded="false">
       <i class="fa fa-filter"></i>
-      Filtrar {{ camara }}, {{usuario}}, {{tipo }}
+      Filtrar
     </button>
     <div class="dropdown-menu">
       <form class="px-4 py-3" action="{{ route('novedad.filter') }}" method="POST">
