--- a/resources/views/layouts/main.edge
+++ b/resources/views/layouts/main.edge
@@ -28,7 +28,7 @@
 
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav">
-        @if(auth.user)
+        {{--  @if(auth.user)  --}}
         <li class="nav-item">
           <a class="nav-link" href="{{ route('novedad.index') }}">Novedades</a>
         </li>
@@ -38,7 +38,7 @@
         <li class="nav-item">
           <a class="nav-link" href="{{ route('tipo.index') }}">Tipos</a>
         </li>
-        @endif
+        {{--  @endif  --}}
       </ul>
       <ul class="navbar-nav ml-auto">
         <li class="nav-item dropdown">
