--- a/resources/views/novedad/index.edge
+++ b/resources/views/novedad/index.edge
@@ -6,23 +6,58 @@
   <a class="btn btn-primary btn-sm" href="{{ route('novedad.create')}}" role="button">Agregar novedad</a>
 </div>
 
-@include('novedad/_filter')
+<form class="px-4 py-3" action="{{ route('novedad.index') }}" _method="GET">
+  {{--  {{ csrfField() }}  --}}
+  <div class="form-group">
+    <select class="custom-select custom-select-sm" name="camara">
+      @set('seleccion', camara)
+      <option value="">Cualquier camara</option>
+      @each(camara in camaras)
+      <option value="{{ camara.id}}" {{ ((''+camara.id) == seleccion) ? ' selected' : ''}}>
+        {{camara.nombre}}
+      </option>
+      @endeach
+    </select>
+  </div>
+
+  <div class="form-group">
+    <select class="custom-select custom-select-sm" name="usuario">
+      @set('seleccion2', usuario)
+      <option value="">Cualquier usuario</option>
+      @each(usuario in usuarios)
+      <option value="{{ usuario.id}}" {{ ((''+usuario.id) == seleccion2) ? ' selected' : ''}}>
+        {{usuario.username}}
+      </option>
+      @endeach
+    </select>
+  </div>
+
+  <div class="form-group">
+    <select class="custom-select custom-select-sm" name="tipo">
+      @set('seleccion3', tipo)
+      <option value="">Cualquier tipo</option>
+      @each(tipo in tipos)
+      <option value="{{ tipo.id}}" {{ ((''+tipo.id) == seleccion3) ? ' selected' : ''}}>
+        {{tipo.nombre}}
+      </option>
+      @endeach
+    </select>
+  </div>
+
+  <button type="submit" class="btn btn-primary">Aplicar</button>
+  <a class="btn btn-default" href="{{ route('novedad.index') }}">Quitar filtros</a>
+</form>
 
 <table class="table table-hover table-striped table-sm">
   <tbody>
     @each(novedad in novedades)
     <tr>
-      <td>
-        {{ datetime(novedad.fecha) }}<br>
-        <h5>{{ novedad.camara.nombre }}</h5>
-      </td>
-      <td>
-        <small class="text-muted">{{ (novedad.user)? novedad.user.username :''}}</small>
-        <br>
-        <h5>{{ novedad.descripcion }}</h5>
-        <br>
-        <small>{{ novedad.tipo? novedad.tipo.nombre: '' }}</small>
-      </td>
+      <td>{{ novedad.id }}</td>
+      {{--  <td>{{ datetime(novedad.fecha) }}</td>  --}}
+      <td>{{ novedad.camara.nombre }}</td>
+      {{--  <td>{{ novedad.descripcion }}</td>  --}}
+      <td>{{ (novedad.user)? novedad.user.username :''}}</td>
+      <td>{{ novedad.tipo? novedad.tipo.nombre: '' }}</td>
       <td>
         <a href="{{ route('novedad.show', { id: novedad.id })}}">Info</a>
         <a href="{{ route('novedad.edit', { id: novedad.id })}}">Editar</a>
@@ -32,5 +67,39 @@
   </tbody>
 </table>
 
-@include('novedad/_paginator')
+@set('filter', '')
+@if(camara)
+  {{ filter = filter + 'camara='+camara+'&'}}
+@endif
+@if(usuario)
+  {{ filter = filter + 'usuario='+usuario+'&'}}
+@endif
+@if(tipo)
+  {{ filter = filter + 'tipo='+tipo+'&'}}
+@endif
+
+<nav aria-label="Page navigation example">
+  <ul class="pagination justify-content-center">
+
+    @if(pagination.current_page !=pagination.first_page)
+    <li class="page-item">
+    <a class="page-link" href="?{{ filter }}page={{pagination.current_page - 1}}">Prev</a>
+    </li>
+    @endif
+
+    @each(page in range(1, pagination.last_page))
+    <li class="page-item {{ pagination.current_page == page ? 'active' : ''}}">
+    <a class="page-link" href="{{ route('novedad.index') }}?{{ filter }}page={{ page }}">{{ page }}</a>
+    </li>
+    @endeach
+
+    @if(pagination.current_page !=pagination.last_page)
+    <li class="page-item">
+    <a class="page-link" href="?{{ filter }}page={{pagination.current_page + 1}}">Next</a>
+    </li>
+    @endif
+
+  </ul>
+</nav>
+
 @endsection
