--- a/resources/views/novedad/edit.edge
+++ b/resources/views/novedad/edit.edge
@@ -28,6 +28,15 @@
     @endif
   </div>
 
+  <div class="form-group">
+    <label>Estado</label>
+    <select class="custom-select custom-select" name="estadoId">
+      @each(estado in estados)
+      <option value="{{ estado.id}}" {{ estado.id == novedad.estadoId ? 'selected' : ''}}> {{estado.nombre}}</option>
+      @endeach
+    </select>
+  </div>
+
   <button type="submit" class="btn btn-primary">Guardar</button>
   <a href="{{ route('novedad.index') }}" class="btn btn-link">Cancelar</a>
 </form>
