--- a/resources/views/layouts/main.edge
+++ b/resources/views/layouts/main.edge
@@ -38,6 +38,9 @@
         <li class="nav-item">
           <a class="nav-link" href="{{ route('tipo.index') }}">Tipos</a>
         </li>
+        <li class="nav-item">
+          <a class="nav-link" href="{{ route('estado.index') }}">Estados</a>
+        </li>
         {{--  @endif  --}}
       </ul>
       <ul class="navbar-nav ml-auto">
