--- a/resources/views/layouts/main.edge
+++ b/resources/views/layouts/main.edge
@@ -7,7 +7,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
   <!-- Bootstrap CSS -->
-  <link rel="stylesheet" href="/css/bootstrap.min.css">
+  <!-- <link rel="stylesheet" href="/css/bootstrap.min.css"> -->
+  <link rel="stylesheet" href="/css/style.css">
   <link rel="stylesheet" href="/font-awesome-4.7.0/css/font-awesome.min.css">
   @!section('stylesheets')
 
